--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,10 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-chatwoot_sdk:
-  git:
-    url: https://github.com/chatwoot/chatwoot-flutter-sdk.git
-    ref: develop
+  chatwoot_sdk:
+    path: ../
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,6 +32,7 @@ chatwoot_sdk:
   image_picker: ^0.8.7
   image: ^4.0.15
   path_provider: ^2.0.13
+  file_picker: ^6.0.0
 
 dev_dependencies:
   flutter_test:
